Custom members field temporarily disabled on flawed logic, DBTable.php not inserting rows but inserting custom field rows on act(). Fixed WaitDiv image wait.gif not showing, Added styling on ISBN search result and correct response on empty result.

--- a/themes/default/style_day.css
+++ b/themes/default/style_day.css
@@ -253,3 +253,12 @@ tbody.striped tr:nth-child(even) { background-color:#CDC; }
 	text-shadow: 3px 3px 3px black;
 	z-index: 1;
 }
+
+#id_repo {
+	background-color: brown;
+	color: white;
+	font-weight: bold;
+	text-align: center;
+	margin: 5px;
+	padding: 10px;
+}
